2005-05-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gst-plugins/0.8.9.xml:
	* src/htdocs/releases/gst-plugins/Makefile.am:
	  release notes

2005-05-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/bugs/bugs.xml:
	  add bugzilla plugins versions

2005-05-08  Andy Wingo  <wingo@pobox.com>

	* bin/planet-update: Update to work with newer planet code.

	* src/htdocs/bindings/bindings.xml: Updates for guile and perl.

2005-05-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gstreamer/0.8.10.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	  add release notes

2005-04-01  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/htdocs/tasks/gnome.xml:
	  Remove Totem subtitle selection task since that's completed.

2005-03-26  Stefan Kost  <ensonic@users.sf.net>

	* src/htdocs/download/index.xml:
	  people should try gentoo forums first before comming to gst-irc

2005-03-26  Stefan Kost  <ensonic@users.sf.net>

	* src/htdocs/bindings/bindings.xsl:
	* src/htdocs/bugs/bugs.xsl:
	  another litle finetuning of the tables

2005-03-26  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  little update
	* src/htdocs/download/index.xml:
	  added gentoo as a distribution with good gstreamer support
	* src/htdocs/documentation/index.xml:
	* src/htdocs/modules/modules.xsl:
	  a litle finetuning of the tables on modules and docu-pages

2005-03-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-ffmpeg/0.8.4.xml:
	* src/htdocs/releases/gst-ffmpeg/Makefile.am:
	  Release of gst-ffmpeg 0.8.4 "Mellow on my fingers".

2005-03-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	  releasing plugins 0.8.8

2005-03-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gst-plugins/0.8.8.xml:
	* src/htdocs/releases/gst-plugins/Makefile.am: