@@ -1,3 +1,10 @@
+2005-06-08  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* bin/apt-rep:
+	  add a space
+	* src/htdocs/download/fedora.xml:
+	  change to fc3, add a note for livna's gpg key
+
 2005-05-25  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* src/htdocs/releases/gst-plugins/0.8.9.xml:
